# goodbooks-recommender

./: .gitignore  LICENSE  MANIFEST.in  Output.md  README.md  build_dataset.py  convert_topk.py  pyproject.toml  requirements.txt  train_rl_reranker.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
apps/: streamlit_app.py
apps/pages/: 0_Home.py  2_Popular.py  3_SVD.py  4_User_CF.py  5_Item_CF.py  6_RL.py  7_Hybrid.py  8_CBF.py  99_About.py  9_Compare.py
data/: book_genres.csv  book_metadata.csv
docs/: ABOUT.md  CHANGELOG.md  INSTALL.md  SETUP.md
models/: hybrid_reranker.pkl  item_topk_k100.npz  rl_cfhard_fast.pth
scripts/: book_genres.py  build_dataset.py  clean_tags.py  download_data.sh  find_personas.py  gen_mini_fixtures.py  inference.py  train_baselines.py  train_rl_hybrid.py  train_rl_reranker.py
src/goodbooks_rec/: config.py  demo_users.py  io.py  multimodel.py  page_common.py  personas.py  recommend.py  ui.py
src/goodbooks_rec/demo/: books.csv  ratings.csv
tests/: conftest.py  test_import.py  test_load_artifacts.py  test_recommend_popular.py
tests/fixtures/mini/: book_metadata.csv  item_topk_k10.npz  svd_hybrid.pkl  train_df.pkl  user_topk_k10.npz
tests/helpers/: load_mini_artifacts.py  mini_mm_A.py
tests/integration/: cold_start.py  test_seen_filtering.py
tests/unit/: test_io.py  test_mappings.py  test_multimodel.py  test_recpopex.py  topk.py
