[project]
name = "goodbooks-rec"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
